--- a/app/src/main/res/layout/activity_lifecycle_dialog.xml
+++ b/app/src/main/res/layout/activity_lifecycle_dialog.xml
@@ -6,12 +6,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    tools:context=".lifecycle.Lifecycle2Activity">
+    tools:context=".lifecycle.LifecycleDialogActivity">
 
-    <Button
+    <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="弹窗"
-        android:onClick="showAlert"></Button>
+        android:layout_height="150dp"
+        android:gravity="center"
+        android:text="这是一个弹窗式 Activity"
+        android:textColor="@android:color/black"></TextView>
 
 </LinearLayout>
