--- a/app/src/main/res/layout/activity_lifecycle1.xml
+++ b/app/src/main/res/layout/activity_lifecycle1.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    tools:context=".lifecycle.Lifecycle1Activity">
+    tools:context=".activitylifecycle.Lifecycle1Activity">
 
     <Button
         android:layout_width="wrap_content"
