--- a/app/src/main/res/layout/activity_lifecycle2.xml
+++ b/app/src/main/res/layout/activity_lifecycle2.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    tools:context=".lifecycle.Lifecycle2Activity">
+    tools:context=".activitylifecycle.Lifecycle2Activity">
 
     <Button
         android:layout_width="wrap_content"
