--- a/app/src/main/res/layout/activity_lifecycle_dialog.xml
+++ b/app/src/main/res/layout/activity_lifecycle_dialog.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    tools:context=".activitylifecycle.LifecycleDialogActivity">
+    tools:context=".functions.activitylifecycle.LifecycleDialogActivity">
 
     <TextView
         android:layout_width="wrap_content"
