--- a/app/src/main/res/layout/activity_lifecycle_fragment.xml
+++ b/app/src/main/res/layout/activity_lifecycle_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragmentlifecycle.LifecycleFragmentActivity">
+    tools:context=".functions.fragmentlifecycle.LifecycleFragmentActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
